--- a/myapp/templates/myapp/Base.html
+++ b/myapp/templates/myapp/Base.html
@@ -63,7 +63,7 @@
                             {% endif %}
                             {% if user.username != "" %}
                                 <li class="nav-link">
-									<a class="nav-link" href="" >Welcome, {{ user }} </a>
+									<a class="nav-link" href="{% url 'myapp:UserProfile' user %}" >Welcome, {{ user }} </a>
 								</li>
                                 <form action="{% url 'myapp:logout' %}" method="post" role="form">
                                 {% csrf_token %}
