--- a/myapp/templates/myapp/Stage.html
+++ b/myapp/templates/myapp/Stage.html
@@ -20,7 +20,7 @@
                                                 {% if Stage == 1 %}
                                                 <p style="color:greenyellow; font-size: 1.5rem;">You have healthy retina ^_^</p>
                                                     <div class="col-12 already">
-                                                        <a target="_blank" href="https://www.topconhealth.com/diabetic-retinopathy-an-eye-disease-with-4-stages/" style="color: royalblue">Tips to maintain healthy eyes</a>
+                                                        <a target="_blank" href="https://www.diabetes.org.uk/guide-to-diabetes/complications/retinopathy/steps-you-can-take-to-avoid-retinopathy" style="color: royalblue">Tips to maintain healthy eyes</a>
                                                     </div>
                                                 {% elif Stage == 2 %}
                                                      <p style="color:red; font-size: 1.5rem;">Unfortunately, You're diseased :(</p>
