--- a/myapp/templates/myapp/home page.html
+++ b/myapp/templates/myapp/home page.html
@@ -23,7 +23,7 @@
 			</div>
 			<!--- start landing page caption -->
 			<div class="caption center-block text-center">
-				<h3>Diabetic Retinopathy Classification System</h3>
+                <h3 style="font-family:Playfair Display, Georgia, Times New Roman, serif; font-size: 45px;"> Welcome to <strong>Diabetic Retinopathy Classification<br> System</strong></h3>
                 {% if user.username != '' %}
 				    <a class="btn btn-outline-light" data-toggle="modal" href="#modaluploadForm">Diagnose</a>
                 {% endif %}
@@ -85,13 +85,43 @@
 
 
 <!--- start about section -->
-		<div id="about">
+    <div id="More">
 			<div class="jumbotron text-center">
-				<h1 class="headingg"><strong>ABOUT</strong></h1>
+				<h1 class="headingg" ><strong>What is Diabetic Retinopathy ?</strong></h1>
 				<div class="row">
 					<div class="col-md-12 text-center">
-						<h3><strong>Group of Computer Science  Bioinformatics Section Ain Shams University Students</strong></h3>
-						<p>Develop robust diagnostic System to automate DR screening. Referral of eyes with DR to an ophthalmologist for further evaluation and treatment would aid in reducing the rate of vision loss, enabling timely and accurate diagnoses.
+
+						<p>
+                            Diabetic retinopathy is an eye disease that people living with diabetes are more at risk of getting. If your blood sugar levels and blood pressure are consistently high, you can seriously damage your blood vessels.
+
+And there are lots of important blood vessels in your eyes. These vessels help supply blood to the seeing part of the eye (called the retina). When these blood vessels are damaged, they can get blocked, leak or grow randomly. This means the retina can’t get the blood it needs and so can’t work properly. Which means you won’t be able to see properly.
+						</p>
+					</div>
+				</div><!--- end of row-->
+			</div><!--- end of jumbtron-->
+		</div> <!---enf of the about section-->
+
+    <div id="Stages">
+			<div class="jumbotron text-center">
+				<h1 class="headingg" ><strong>Stages of Diabetic Retinopathy ?</strong></h1>
+				<div class="row">
+					<div class="col-md-12 text-center" >
+                        <h2 style="text-align: left; color: #00cc00">Stage 1 :</h2> <p style="text-align: left"><strong>Mild Nonproliferative</strong>, there will be balloon-like swelling in small areas of the blood vessels in the retina.</p>
+                        <h2 style="text-align: left; color: darkorange">Stage 2 :</h2> <p style="text-align: left"> known as <strong> Moderate Nonproliferative Retinopathy</strong>, some of the blood vessels in the retina will become blocked.</p>
+                        <h2 style="text-align: left; color: red">Stage 3 :</h2> <p style="text-align: left"><strong>Severe Nonproliferative Retinopathy</strong> brings with it more blocked blood vessels, which leads to areas of the retina no longer receiving adequate blood flow. Without proper blood flow, the retina can’t grow new blood vessels to replace the damaged ones.</p>
+					    <h2 style="text-align: left; color: darkred;">Stage 4 :</h2> <p style="text-align: left">The fourth and final stage is known as <strong> Proliferative Retinopathy</strong>. This is the advanced stage of the disease. Additional new blood vessels will begin to grow in the retina, but they will be fragile and abnormal. Because of this, they can leak blood which will lead to vision loss and possibly blindness.</p>
+                    </div>
+				</div><!--- end of row-->
+			</div><!--- end of jumbtron-->
+		</div> <!---enf of the about section-->
+
+		<div id="about">
+			<div class="jumbotron text-center">
+				<h1 class="headingg" ><strong>ABOUT</strong></h1>
+				<div class="row">
+					<div class="col-md-12 text-center">
+						<h3><strong>A Group of Computer Science  Bioinformatics Section Ain Shams University Students</strong></h3>
+						<p>Developed a diagnostic System to automate DR screening. Referral of eyes with DR to an ophthalmologist for further evaluation and treatment would aid in reducing the rate of vision loss, enabling timely and accurate diagnoses.
 						</p>
 					</div>
 				</div><!--- end of row-->
