--- a/myapp/templates/myapp/reg.html
+++ b/myapp/templates/myapp/reg.html
@@ -20,34 +20,58 @@
             <form class="col-12" method="post">
                 {% csrf_token %}
                 <div class="form-group">
+                    <span class="inline">
+                        <label style="text-align: left;float: left;color: red">*</label>
+                        <label style="text-align: left;float: left; color: white">Your Username:</label>
+                        </span>
                     <input type="text" name="username" class="form-control" placeholder="Enter Username">
-                    <p>Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.</p>
+                    <p style="color: whitesmoke">150 characters or fewer. Letters, digits and @/./+/-/_ only.</p>
                 </div>
                 <div class="form-group">
+                    <span class="inline">
+                        <label style="text-align: left;float: left;color: red">*</label>
+                    <label style="text-align: left;float: left; color: white">Your Password:</label>
+                    </span>
+
                     <input type="password" name="password1" class="form-control" placeholder="Enter Password">
-                    <p>Your password can't be too similar to your other personal information.<br>
+                    <p style="color: whitesmoke">Your password can't be too similar to your other personal information.<br>
                             Your password must contain at least 8 characters.<br>
                             Your password can't be a commonly used password.<br>
                             Your password can't be entirely numeric.</p>
                 </div>
                 <div class="form-group">
-                    <input type="password" name="password2" class="form-control" placeholder="Password Confirmation">
-                    <p>Enter the same password as before, for verification.</p>
+                    <span class="inline">
+                        <label style="text-align: left;float: left;color: red">*</label>
+                    <label style="text-align: left;float: left; color: white">Confirm Password:</label>
+                    </span>
+                    <input type="password" name="password2" class="form-control" placeholder="Password Confirmation" >
                 </div>
                 <div class="form-group">
+                    <span class="inline">
+                        <label style="text-align: left;float: left;color: red">*</label>
+                    <label style="text-align: left;float: left; color: white">Your First Name:</label>
+                    </span>
                     <input type="text" name="first_name" class="form-control" placeholder="Enter First Name">
                 </div>
                 <div class="form-group">
+                    <span class="inline">
+                        <label style="text-align: left;float: left;color: red">*</label>
+                    <label style="text-align: left;float: left; color: white">Your Last Name:</label>
+                    </span>
                     <input type="text" name="last_name" class="form-control" placeholder="Enter Last Name">
                 </div>
+
                 <div class="form-group">
+                    <label style="text-align: left;float: left; color: white">Your Mobile Number:</label>
                     <input type="text" name="mobile_number" class="form-control" placeholder="Enter Mobile Number">
                 </div>
                 <div class="form-group">
-                    <input type="text" name="address" class="form-control" placeholder="Enter Address">
+                    <label style="text-align: left;float: left; color: white">Your Location:</label>
+                    <input type="text" name="address" class="form-control" placeholder="eg. Cairo,Egypt">
                 </div>
                 <div class="form-group">
-                    <input type="text" name="email" class="form-control" placeholder="Enter E-mail">
+                    <label style="text-align: left;float: left; color: white">Your E-mail Address:</label>
+                    <input type="text" name="email" class="form-control" placeholder="example@example.com">
                 </div>
                 {% csrf_token %}
                 <button type="submit" class="btn"><i class="fas fa-sign-in-alt"></i>Register</button>
